linkeo de todas las paginas

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -17,13 +17,13 @@
         
         <nav class="nav">
             <ul class="nav-list">
-                <li><a href="./paginas/sobre_mi.html">Sobre mí</a></li>
-                <li><a href="./paginas/formacion.html">Formacion</a></li>
-                <li><a href="./paginas/proyectos.html">Proyectos</a></li>
-                <li><a href="./paginas/contacto.html">Contacto</a></li>
+                <li><a href="./sobre_mi.html">Sobre mí</a></li>
+                <li><a href="./formacion.html">Formacion</a></li>
+                <li><a href="./proyectos.html">Proyectos</a></li>
+                <li><a href="#">Contacto</a></li>
             </ul>
 
-            <a class="abrir-menu" href="./paginas/menu.html"><img id="burger" src="./assets/menu.png" alt=""></a>
+            <a class="abrir-menu" href="./menu.html"><img id="burger" src="./assets/menu.png" alt=""></a>
         </nav>
     </header>
     
