--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->   
+    <meta name="description" content="Portfolio de Juan Jose Arce Herrera desarrollador web junior donde habla de él su formacion los proyectos y la posibilidad de trabajar con él">
     <!--Favicon-->
     <link rel="shortcut icon" href="./assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
