--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -26,6 +26,18 @@
             <a class="abrir-menu" href="./menu.html"><img id="burger" src="./assets/menu.png" alt=""></a>
         </nav>
     </header>
+
+    <section class="proyectos">
+        <h1>Proyectos</h1>
+        <div class="card" style="width:400px">
+            <img class="card-img-top" src="../assets/github.png" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">John Doe</h4>
+              <p class="card-text">Some example text.</p>
+              <a href="https://github.com/JuanjoArce?tab=repositories" target="_blank" class="btn btn-primary">See Profile</a>
+            </div>
+          </div>
+    </section>
     
     <footer>
         <p>Author: </p>
