--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Portfolio</title>
+    <title>Contacto</title>
 </head>
 <body>
     <!--El inicio quiero que tenga un resumen de todas las paginas-->
