--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Portfolio</title>
+    <title>Proyectos</title>
 </head>
 <body>
     <!--El inicio quiero que tenga un resumen de todas las paginas-->
@@ -32,9 +32,9 @@
         <div class="card" style="width:400px">
             <img class="card-img-top" src="../assets/github.png" alt="Card image">
             <div class="card-body">
-              <h4 class="card-title">John Doe</h4>
-              <p class="card-text">Some example text.</p>
-              <a href="https://github.com/JuanjoArce?tab=repositories" target="_blank" class="btn btn-primary">See Profile</a>
+              <h4 class="card-title">Mi Perfil de GitHub</h4>
+              <p class="card-text">En mi perfil de GitHub encontraras mi repositorios, donde estan algunos de mis proyectos y donde practico.</p>
+              <a href="https://github.com/JuanjoArce?tab=repositories" target="_blank" class="btn btn-primary">Ingresa a mi perfil de GitHub</a>
             </div>
           </div>
     </section>
