--- a/paginas/sobre_mi.html
+++ b/paginas/sobre_mi.html
@@ -27,9 +27,7 @@
         </nav>
     </header>
 <div class="container-sobre_mi">
-    <div class="pagi-sobre_mi">
-        <img src="../assets/sobre_mi.jpeg" alt="">
-    </div>
+    <h2>Sobre mí</h2>
     <div class="text-sobre_mi">
         <article>
             A mis 34 años, he encontrado un equilibrio en mi estilo de vida que refleja mis valores y pasiones. Como orgulloso vegetariano, he abrazado una forma de vivir que respeta a los animales y el medio ambiente. Cuidar de mi salud y bienestar es una prioridad, y es por eso que la actividad física es una parte esencial de mi rutina diaria. A través del ejercicio, encuentro energía y vitalidad que me impulsa en todas mis actividades.
@@ -43,6 +41,7 @@
             En resumen, soy una persona que valora la vida, la salud y las relaciones significativas. Mi compromiso con el vegetarianismo, la actividad física y la música refleja mi deseo de vivir con autenticidad y plenitud. En Ezeiza, junto a mi amada pareja, encuentro el confort de un hogar y la conexión con mis raíces cordobesas. Como hincha fiel de Instituto, celebro mi pasión por el deporte y la comunidad. La música es mi constante compañera, tejiendo su hilo a través de mis días y noches, creando una sinfonía única que es mi vida.
         </article>
     </div>
+    <img id="pag-img-sobre_mi" src="../assets/sobre_mi.jpeg" alt="">
 </div>
     
     <footer>
