--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!--El inicio quiero que tenga un resumen de todas las paginas-->
     <header>
-        <img class="logo" src="./assets/_JJ .png" alt="logo">
+        <a class="logo" href="#"><img src="./assets/_JJ .png" alt="logo"></a>
         
         <nav class="nav">
             <ul class="nav-list">
