--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->   
+    <meta name="description" content="">
+    <meta name="keywords" content="portafolio, desorrallador, web, paginas,developer">
     <!--Favicon-->
-    <link rel="shortcut icon" href="./assets/_JJ .png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
@@ -12,25 +15,25 @@
 <body>
     <!--El inicio quiero que tenga un resumen de todas las paginas-->
     <header>
-        <a href="../index.html"><img class="logo" src="../assets/_JJ .png" alt="logo">
-        </a>
+        <a class="logo" href="../index.html"><img src="../assets/_JJ .png" alt="logo"></a>
         
         <nav class="nav">
             <ul class="nav-list">
                 <li><a href="./sobre_mi.html">Sobre mí</a></li>
-                <li><a href="./formacion.html">Formacion</a></li>
-                <li><a href="./proyectos.html">Proyectos</a></li>
+                <li><a href="./paginas/formacion.html">Formacion</a></li>
+                <li><a href="./paginas/proyectos.html">Proyectos</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
 
-            <a class="abrir-menu" href="./menu.html"><img id="burger" src="./assets/menu.png" alt=""></a>
+            <a class="abrir-menu" href="./menu.html"><img id="burger" src="../assets/menu.png" alt=""></a>
         </nav>
     </header>
-
-    <h1 id="h1-contacto">Contacto</h1>
     
     <section id="contacto" class="mb-6 px-6" style="background-color: #EBD4BC; padding-left: 40px; padding-right: 40px;">
 
+        <p>¿Tienes alguna pregunta, comentario o sugerencia? Estamos encantados de escucharte. Utiliza el formulario de contacto a continuación para ponerte en contacto con nosotros. Ya sea que quieras compartir tus ideas, solicitar información adicional o simplemente saludarnos, estamos aquí para ayudarte.
+
+            Nuestro equipo revisará tu mensaje y te responderá en el menor tiempo posible. Valoramos mucho tus opiniones y esperamos poder brindarte una experiencia excepcional. ¡Esperamos saber de ti pronto!</p>
         <div class="container form-container">
     <div class="row justify-content-center">
       <div class="col-md-6">
