--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Favicon-->
-    <link rel="shortcut icon" href="./assets/_JJ .png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <title>Proyectos</title>
@@ -12,8 +12,7 @@
 <body>
     <!--El inicio quiero que tenga un resumen de todas las paginas-->
     <header>
-        <a href="../index.html"><img class="logo" src="../assets/_JJ .png" alt="logo">
-        </a>
+        <a class="logo" href="../index.html"><img src="../assets/_JJ .png" alt="logo"></a>
         
         <nav class="nav">
             <ul class="nav-list">
@@ -23,7 +22,7 @@
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
 
-            <a class="abrir-menu" href="./menu.html"><img id="burger" src="./assets/menu.png" alt=""></a>
+            <a class="abrir-menu" href="./menu.html"><img id="burger" src="../assets/menu.png" alt=""></a>
         </nav>
     </header>
 
