agregacion de gradiantes

--- a/paginas/sobre_mi.html
+++ b/paginas/sobre_mi.html
@@ -34,20 +34,11 @@
         <div class="pag-img-sobre_mi">
             <img src="../assets/sobre_mi.jpeg" alt="">
         </div>
-        <div class="art-2">
-            <p>
-            En el hermoso entorno de Ezeiza, comparto mi vida con mi apreciada pareja. Juntos, creamos un hogar lleno de amor y armonía. Como auténticos cordobeses, llevamos con nosotros el espíritu cálido y acogedor de nuestra tierra natal. Cada día es una oportunidad para celebrar nuestra conexión y construir un futuro juntos.
-            </p>
-        </div>
-    <div>
+    <div class="futbol">
         <article>
             Mi corazón late con pasión por el fútbol y mi lealtad se dirige a Instituto, el equipo que hace vibrar mi espíritu deportivo. Los colores y la historia de este club son una parte integral de mi identidad, recordándome de dónde vengo y lo que me inspira.
         </article>
-    </div>
-    <div>
-        <article>
-            La música es mi refugio y mi compañera constante en este viaje llamado vida. No tengo límites cuando se trata de géneros musicales, ya que me deleito con la diversidad de ritmos y melodías que el mundo tiene para ofrecer. Cada canción es como un capítulo en mi historia personal, acompañándome en momentos de alegría y reflexión.
-        </article>
+        <img class="img-sobre_mi" src="../assets/iacc.png" alt="">
     </div>
     <div>
         <article>
