--- a/index.html
+++ b/index.html
@@ -65,14 +65,28 @@
     </section>
     <section class="contacto">
         <h2>Contacto</h2>
-        <form class="formulario" action="#" autocomplete="off">
-            <input type="text" name="nombre"
-            placeholder="Ingresa tu nombre" class="campo">
-            <input type="email" name="email"
-            placeholder="Ingresa tu email" class="campo">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <input type="submit" name="enviar" value="enviar mensaje" class="btn-enviar">
-        </form>
+        <div class="container form-container">
+            <div class="row justify-content-center">
+              <div class="col-md-6">
+                <h1 class="text-center mb-4">Formulario de Contacto</h1>
+                <form>
+                  <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="correo" class="form-label">Correo Electrónico</label>
+                    <input type="email" class="form-control" id="correo" name="correo" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="mensaje" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Enviar</button>
+                </form>
+              </div>
+            </div>
+                </div>
     </section>
     <footer>
         <p>Author: </p>
