--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!--Favicon-->
     <link rel="shortcut icon" href="./assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="./css/style.css">
     <title>Portfolio</title>
 </head>
@@ -29,7 +30,7 @@
         </nav>
     </header>
     <section class="bienvenidos">
-        <h1>¡Bienvenidos!</h1>
+        <h1 class="animate__animated animate__heartBeat">¡Bienvenidos!</h1>
         <div class="article-bienvenida">
             <article class="img_bienvenidos"><img id="img-bienvenidos" src="./assets/Bienvenidos.jpeg" alt=""></article>
             <article>
@@ -45,7 +46,6 @@
         <div class="img-sobre_mi">
             <img src="./assets/sobre_mi.jpeg" alt="">
         </div>
-        <button class="link-sobre_mi"><a href="./paginas/sobre_mi.html">Ingresa aquí para saber mas</a></button>
     </section>
     <section class="formacion">
         <h2>Formacion</h2>
@@ -53,7 +53,6 @@
         <div class="img-formacion">
             <img src="./assets/formacion.jpeg" alt="">
         </div>
-        <button class="link-formacion"><a href="./paginas/formacion.html">Ingresa aquí para saber mas</a></button>
     </section>
     <section class="proyectos">
         <h2>Proyectos</h2>
@@ -61,7 +60,6 @@
         <div class="img-proyectos">
             <img src="./assets/proyectos.jpeg" alt="">
         </div>
-        <button class="link-proyectos"><a href="./paginas/proyectos.html">Ingresa aquí para saber mas</a></button>
     </section>
     <section class="contacto">
         <h2>Contacto</h2>
@@ -88,6 +86,9 @@
             </div>
                 </div>
     </section>
+    <div class="boton-arriba">
+        <button type="button" class="btn btn-info"><a href="#">Arriba</a></button>
+    </div>
     <footer>
         <p>Author: </p>
         <p><a href="mailto:hege@example.com"> juanjosearceherrera@gmail.com</a></p>
