--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,6 +9,7 @@
     <!--Favicon-->
     <link rel="shortcut icon" href="../assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
 </head>
