--- a/paginas/formacion.html
+++ b/paginas/formacion.html
@@ -6,6 +6,7 @@
     <!--Favicon-->
     <link rel="shortcut icon" href="../assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/style.css">
     <title>Formacion</title>
 </head>
@@ -26,7 +27,7 @@
         </nav>
     </header>
         <div class="titulo-formacion">
-    <h1>Formación</h1>
+    <h1 class="animate__animated animate__heartBeat">Formación</h1>
     </div>
     <section class="formacion-Freecode">
         <h2>FreecodeCamp</h2>
