--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -6,6 +6,7 @@
     <!--Favicon-->
     <link rel="shortcut icon" href="../assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/style.css">
     <title>Proyectos</title>
 </head>
@@ -27,7 +28,7 @@
     </header>
 
     <section class="proyectos">
-        <h1>Proyectos</h1>
+        <h1 class="animate__animated animate__heartBeat">Proyectos</h1>
         <div class="card" style="width:400px">
             <img class="card-img-top" src="../assets/github.png" alt="Card image">
             <div class="card-body">
