--- a/paginas/sobre_mi.html
+++ b/paginas/sobre_mi.html
@@ -6,6 +6,7 @@
     <!--Favicon-->
     <link rel="shortcut icon" href="../assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/style.css">
     <title>Sobre mí</title>
 </head>
@@ -26,7 +27,7 @@
         </nav>
     </header>
 <div class="container-sobre_mi">
-    <h2>Sobre mí</h2>
+    <h2 class="animate__animated animate__heartBeat">Sobre mí</h2>
     <div class="text-sobre_mi">
         <article>
             A mis 34 años, he encontrado un equilibrio en mi estilo de vida que refleja mis valores y pasiones. Como orgulloso vegetariano, he abrazado una forma de vivir que respeta a los animales y el medio ambiente. Cuidar de mi salud y bienestar es una prioridad, y es por eso que la actividad física es una parte esencial de mi rutina diaria. A través del ejercicio, encuentro energía y vitalidad que me impulsa en todas mis actividades.
