--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO -->   
-    <meta name="description" content="">
-    <meta name="keywords" content="portafolio, desorrallador, web, paginas,developer">
+    <meta name="description" content="Contacto para mayor información">
+    <meta name="keywords" content="portafolio, desarrollador, web, paginas,developer">
     <!--Favicon-->
     <link rel="shortcut icon" href="../assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
