--- a/paginas/sobre_mi.html
+++ b/paginas/sobre_mi.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sobre mi">
+    <meta name="keywords" content="portafolio, desarrollador, web, paginas,developer">
     <!--Favicon-->
     <link rel="shortcut icon" href="../assets/_JJ .png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
