--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -21,8 +21,8 @@
         <nav class="nav">
             <ul class="nav-list">
                 <li><a href="./sobre_mi.html">Sobre mí</a></li>
-                <li><a href="./paginas/formacion.html">Formacion</a></li>
-                <li><a href="./paginas/proyectos.html">Proyectos</a></li>
+                <li><a href="./formacion.html">Formacion</a></li>
+                <li><a href="./proyectos.html">Proyectos</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
 
