--- a/paginas/sobre_mi.html
+++ b/paginas/sobre_mi.html
@@ -35,13 +35,12 @@
             A mis 34 años, he encontrado un equilibrio en mi estilo de vida que refleja mis valores y pasiones. Como orgulloso vegetariano, he abrazado una forma de vivir que respeta a los animales y el medio ambiente. Cuidar de mi salud y bienestar es una prioridad, y es por eso que la actividad física es una parte esencial de mi rutina diaria. A través del ejercicio, encuentro energía y vitalidad que me impulsa en todas mis actividades.
         </article>
         <div class="pag-img-sobre_mi">
-            <img src="../assets/sobre_mi.jpeg" alt="">
+            <img src="../assets/sobre_mi.jpeg" class="img-fluid">    
         </div>
     <div class="futbol">
         <article>
             Mi corazón late con pasión por el fútbol y mi lealtad se dirige a Instituto, el equipo que hace vibrar mi espíritu deportivo. Los colores y la historia de este club son una parte integral de mi identidad, recordándome de dónde vengo y lo que me inspira.
         </article>
-        <img class="img-sobre_mi" src="../assets/iacc.png" alt="">
     </div>
     <div>
         <article>
