creacion se mixins

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <section class="bienvenidos">
         <h1 class="animate__animated animate__heartBeat">¡Bienvenidos!</h1>
         <div class="article-bienvenida">
-            <article class="img_bienvenidos"><img id="img-bienvenidos" src="./assets/Bienvenidos.jpeg" alt=""></article>
+            <img class="img-fluid" id="img-bienvenidos" src="./assets/Bienvenidos.jpeg" alt="">
             <article>
                 <h2>Estoy encantado de tenerte aquí, explorando mi mundo digital. Esta página ha sido cuidadosamente diseñada para brindarte una visión completa de quién soy y qué hago. Permíteme guiarte a través de las secciones principales:</h2>
-                <img class="paginas-portafolio" src="./assets/paginas-portfolio.png" alt="">
+                <img class="paginas-portafolio img-fluid" src="./assets/paginas-portfolio.png" alt="">
             </article>
         </div>
         
@@ -44,14 +44,14 @@
         <h2>Sobre mí</h2>
         <h3>Aquí podrás conocer un poco más sobre mí, mi trayectoria y mis pasiones. Te contaré acerca de mi viaje profesional y cómo llegué a donde estoy hoy. Es un espacio donde compartimos un poco de mi personalidad y lo que me motiva.</h3>
         <div class="img-sobre_mi">
-            <img src="./assets/sobre_mi.jpeg" alt="">
+            <img class="img-fluid" src="./assets/sobre_mi.jpeg" alt="">
         </div>
     </section>
     <section class="formacion">
         <h2>Formacion</h2>
         <h3>En esta sección, podrás sumergirte en mi proceso de aprendizaje y desarrollo. Te contaré sobre mis estudios, cursos y experiencias educativas que me han ayudado a crecer y a perfeccionar mis habilidades.</h3>
         <div class="img-formacion">
-            <img src="./assets/formacion.jpeg" alt="">
+            <img class="img-fluid" src="./assets/formacion.jpeg" alt="">
         </div>
     </section>
     <section class="proyectos">
